<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/id_yas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp"
    android:background="@color/backgroundApp"
    android:elevation="16dp"
    android:orientation="vertical"
    android:padding="5dp">

    <ScrollView
        android:id="@+id/scrollview1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#d1d1d1">

        <LinearLayout
            android:id="@+id/id_essai"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:orientation="vertical">


            <!-- 1er -->

            <LinearLayout
                android:id="@+id/img_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="220dp"

                android:layout_marginBottom="8dp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="6dp"

                android:layout_marginTop="210dp"
                android:background="#d1d1d1"
                android:elevation="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="159dp"
                    android:layout_height="255dp"
                    android:layout_marginBottom="-2dp"
                    android:layout_marginTop="-1dp" />

                <LinearLayout
                    android:id="@+id/text"
                    android:layout_width="194dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="12dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nom_id"
                        android:layout_width="171dp"
                        android:layout_height="66dp"
                        android:layout_marginTop="32dp"
                        android:text="@string/nom_acteur_realisateur1"
                        android:textAlignment="center"
                        android:textColor="@color/cardview_dark_background"
                        android:textSize="22dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/date_naiss_id"
                        android:layout_width="176dp"
                        android:layout_height="77dp"
                        android:text="@string/naissance"
                        android:textAlignment="center"
                        android:textColor="@color/colorAccent"
                        android:textSize="18dp" />

                </LinearLayout>

            </LinearLayout>

            <!-- 2eme biographie -->

            <LinearLayout
                android:id="@+id/id_biogr"
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="6dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="6dp"
                android:background="#ffffff"
                android:elevation="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/bibliographie_id"
                    android:layout_width="wrap_content"
                    android:layout_height="20sp"
                    android:layout_margin="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/bibliographie"
                    android:textColor="@color/colorAccent"
                    android:textSize="14dp" />

                <android.support.v4.widget.NestedScrollView
                    android:id="@+id/scrollview2"
                    android:layout_width="match_parent"
                    android:layout_height="125dp">

                    <TextView
                        android:id="@+id/text_biog"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:elevation="70dp"
                        android:text="@string/descriptionbiblio" />
                </android.support.v4.widget.NestedScrollView>

                <Button
                    android:id="@+id/btn_lire"
                    android:layout_width="95dp"
                    android:layout_height="37dp"
                    android:layout_marginLeft="240dp"
                    android:background="@color/cardview_light_background"
                    android:text="@string/liretout"
                    android:textColor="@color/colorAccent"
                    android:textSize="12dp" />

            </LinearLayout>


            <!-- 3eme Filmographie-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="#ffffff"
                android:elevation="20dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/filmographie_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/filmographie"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/filmo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                </android.support.v7.widget.RecyclerView>
            </LinearLayout>


            <!-- 4eme Layout-->

            <LinearLayout
                android:id="@+id/quatrelayout_i"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="6dp"
                android:layout_marginRight="6dp"
                android:background="#ffffff"

                android:orientation="vertical">

                <TextView
                    android:id="@+id/commentaires_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="6dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:text="@string/commentaire"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/ajout_commentaires_id"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_marginLeft="240dp"
                    android:layout_marginTop="-27dp"
                    android:background="@color/colorwrite"
                    android:text="@string/Ajouter"
                    android:textColor="@color/colorAccent"
                    android:textSize="12dp" />
                <!-- 1er commentaire -->
                <LinearLayout
                    android:id="@+id/commentaires_id1"
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:layout_marginBottom="16dp"

                    android:orientation="horizontal">
                    <!-- Circle Image -->
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img1_id"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/emmawatson" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/commentaires_id11"
                            android:layout_width="263dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/titlepersonne1"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/commentaires_id12"
                            android:layout_width="268dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="-6dp"
                            android:text="@string/nompersonne1"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="16dp" />

                        <android.support.v4.widget.NestedScrollView
                            android:id="@+id/commentaires_id13"
                            android:layout_width="247dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="lpopô"
                            android:textColor="@color/colorAccent">

                            <TextView
                                android:id="@+id/commentaires_id14"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/commentairpersonne1"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="12dp" />

                        </android.support.v4.widget.NestedScrollView>


                    </LinearLayout>


                </LinearLayout>

                <!-- 2eme commentaire -->
                <LinearLayout
                    android:id="@+id/commentaires_id2"
                    android:layout_width="match_parent"
                    android:layout_height="105dp"
                    android:layout_marginBottom="16dp"

                    android:orientation="horizontal">
                    <!-- Circle Image -->
                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/img2_id"
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginLeft="5dp"
                        android:src="@drawable/emmawatson" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/commentaires_id21"
                            android:layout_width="263dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="@string/titlepersonne1"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/commentaires_id22"
                            android:layout_width="268dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="-6dp"
                            android:text="@string/nompersonne1"
                            android:textColor="@color/cardview_dark_background"
                            android:textSize="16dp" />

                        <android.support.v4.widget.NestedScrollView
                            android:id="@+id/commentaires_id23"
                            android:layout_width="247dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:text="lpopô"
                            android:textColor="@color/colorAccent">

                            <TextView
                                android:id="@+id/commentaires_id24"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="16dp"
                                android:layout_marginRight="10dp"
                                android:text="@string/commentairpersonne1"
                                android:textColor="@android:color/darker_gray"
                                android:textSize="12dp" />

                        </android.support.v4.widget.NestedScrollView>



                    </LinearLayout>


                </LinearLayout>
            </LinearLayout> <!-- Fin du 4eme layout -->


        </LinearLayout>



    </ScrollView>


</android.support.v7.widget.CardView>
